tests/NormalTests/paczka1/fuzzy1/93010099.err
Error in line 6: QE5fsV A880 5,5
Error in line 34: xbRtf S620 6,1
Error in line 37: xbRtf S726 27,0
